fix(breadcrumbs): consistently align separator icons independent of their font-set class
* Add new css class
* Reduces specificity of css selector used to style
the separator icon. Now the style is applied to the newly added class.
This makes the styling independent of the font-set class
associated to the icon, which is currently not the case.

Closes #1254

--- a/src/platform/experimental/breadcrumbs/breadcrumb/breadcrumb.component.scss
+++ b/src/platform/experimental/breadcrumbs/breadcrumb/breadcrumb.component.scss
@@ -11,7 +11,7 @@
       margin: 0 10px;
     }
   }
-  mat-icon.material-icons.mat-icon {
+  .td-breadcrumb-icon {
     display: inline-flex;
     vertical-align: middle;
   }
